2005-02-04  Chris Toshok  <toshok@ximian.com>

	* DebuggerCommands.cs: Update so this compiles/works with new MD.

	* DebuggingService.cs (DebuggingService.GetDebugProgressMonitor):
	create a progress monitor in which to display output from the
	debugged program.  not sure what to do about input, though.
	(DebuggingService.Cleanup): null current_monitor.
	(DebuggingService.thread_created): add
	TargetOutput/DebuggerOutput/DebuggerError handlers for the new
	thread, and use Gtk.ThreadNotify.
	(DebuggingService.initialized_event): same.
	(DebuggingService.thread_exited): use Gtk.ThreadNotify
	(DebuggingService.target_output, DebuggingService.debugger_output,
	DebuggingService.debugger_error): delegates for inferior output -
	output to our current_monitor.
	(DebuggingService.target_event): use Gtk.ThreadNotify.
	(DebuggingService.OnBreakpointHit): same.

2004-10-23  Chris Toshok  <toshok@ximian.com>

	* Gui/DebuggerThreadPad.cs: add the current location to stopped
	threads.

	* DebuggingService.cs: add thread (process) events and generate
	thread state change events so the threadpad will update properly.

2004-10-22  Chris Toshok  <toshok@ximian.com>

	* Makefile.am (FILES): add Gui/DebuggerThreadPad.cs

	* MonoDevelopDebugger.addin.xml: add the threadpad xml.

	* Gui/DebuggerThreadPad.cs: new pad, displaying a (for now very
	unreactive) thread list.

2004-10-22  Chris Toshok  <toshok@ximian.com>

	* MonoDevelopDebugger.addin.xml: add DebuggerStackTracePad to the
	views.

	* Gui/DebuggerStackTracePad.cs: new file.

	* Makefile.am (FILES): add DebuggerStackTracePad.cs

2004-10-21  Chris Toshok  <toshok@ximian.com>

	* DebuggingService.cs: return String.Empty from CurrentFilename if
	the frame's SourceAddress is null.  Likewise, return -1 from
	CurrentLineNumber in this case.

2004-06-25  Todd Berman  <tberman@off.net>

	* DebuggingService.cs: sync with cvs debugger.

2004-06-18  Todd Berman  <tberman@off.net>

	* Makefile.am: use pkg-config properly.
